--- a/spring-rest-jdbc-app/src/main/resources/application.properties
+++ b/spring-rest-jdbc-app/src/main/resources/application.properties
@@ -14,3 +14,6 @@ spring.jpa.show-sql=true
 logging.level.org.springframework.jdbc.core = TRACE
 spring.jpa.properties.hibernate.format_sql = true	
 spring.jpa.hibernate.ddl-auto=none
+#store log files in desk 
+#example c:/log/my-logs.log
+logging.file.name=log/my-logs.log
