--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,6 +1,4 @@
-
-spring.profiles.active=dev
-server.port= 8082
+#server.port= 8082
 spring.main.banner-mode=off
 #server.servlet.context-path=/users-service
 
