--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,4 +18,4 @@ spring.jpa.properties.hibernate.format_sql = true
 spring.jpa.hibernate.ddl-auto=none
 #store log files in desk 
 #example c:/log/my-logs.log
-logging.file.name=log/my-logs.log
+#logging.file.name=log/my-logs.log
